# visual-geo-solver

./: .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml  train.sh
configs/: config_curves.yaml  config_polygonalization_max.yaml  config_regression_polygonalization.yaml  config_regression_steiner.yaml  config_steiner.yaml
data/: Curves.py  GeoSteinerDataset.py  PolygonDataset.py
eval_scripts/: eval_polygon.sh  eval_squares.sh  eval_steiner.sh
geosteiner-5.3/: ChangeLog  INSTALL  LICENSE  Makefile  Makefile.in  README  RELEASE_NOTES  aclocal.m4  analyze.c  analyze.h  analyze_ckpt.c  bb.c  bb.h  bbmain.c  bbox.awk  bbsubs.c  bbsubs.h  bitmaskmacros.h  bmst.c  bmst.h  bsd.c  bsd.h  btsearch.c  btsearch.h  callback.c  callback.h  channels.c  channels.h  check_lib_syms.sh  ckpt.c  ckpt.h  config.h  config.h.in  config.status  configure  configure.ac  configure~  constrnt.c  constrnt.h  costextension.h  (+154 more)
geosteiner-5.3/autom4te.cache/: output.0  requests  (+1 more)
model/: diffusion.py
polygon_generation/: README.md  build_cpp.sh  generate_polygons_data.py  max_area_polygon_cpp.cpp  max_area_polygon_ilp.py  max_area_polygonization.py  random_polygonization.py  setup.py
schedulers/: ddim.py  flow_matching.py
scripts/: eval_squares.py  evaluate_polygonization.py  evaluate_steiner.py  extract_polygon_graph.py  extract_steiner_graph.py  sample_graphs_steiner.py  train.py
steiner_generation/: README.md  generate_steiner_data.py
training/: train_diffusion.py  train_regression.py
utils/: config_handler.py  dataloader.py  metrics.py  seed.py  viz.py  wandb.py
(+48 files in other folders)
